syntax = "proto3";

package finance.trading.analysis;

import "google/protobuf/timestamp.proto";

message FinancialTick {
    string id = 1;
    string sec_type = 2;
    string last = 3;
    google.protobuf.Timestamp trade_timestamp = 4;
    google.protobuf.Timestamp wallclock_timestamp = 5;
    int64 delay = 6;
}

message EMAResult {
    string symbol = 1;
    double ema38 = 2;
    double ema100 = 3;
    google.protobuf.Timestamp trade_timestamp = 4;

}

message BuyAdvisory {
    string symbol = 1;
    google.protobuf.Timestamp trade_timestamp = 2;
    string message = 3;
}